Fix patents page spacing to match publications
Add patents and patent classes to CSS margin/padding rules so
the header spacing matches the publications pages. Also add
Description component to patent detail view and fix typo in
publication download link.

--- a/src/src/assets/css/index.scss
+++ b/src/src/assets/css/index.scss
@@ -39,6 +39,8 @@
     &.about,
     &.publications,
     &.publication,
+    &.patents,
+    &.patent,
     &.consultancy {
       margin: 96px auto 58px;
       padding-bottom: 50px;
